{
    "name": "PlayerMovement",
    "maps": [
        {
            "name": "PlayerMove",
            "id": "049a50be-9616-41e5-8aa7-a13af3ece73c",
            "actions": [
                {
                    "name": "Left_Right_Movement",
                    "type": "Value",
                    "id": "4a2e36c4-8e40-4472-ac02-9a1eca739b92",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "ddff7f58-91dc-4782-994e-f7e588bcfb9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "1438c6cd-30d5-49cb-843d-41c431861ba6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Right_Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "9f459ed8-54c1-4e0f-a7d6-c484b68e682f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Right_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "01eb3a23-db7a-4926-a19c-5404e6f352dd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Right_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "17f2c14c-3ebc-4ae3-aaf2-ab7e7e7c06c2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}